[workspace]
members = [
    "programs/*",
    "cli-rust",
    "unstake_interface"
]

[patch.crates-io]
mpl-token-metadata = { git = "https://github.com/igneous-labs/metaplex-program-library", package = "mpl-token-metadata", branch = "fix/set-token-standard-update-auth-mut" } # https://github.com/metaplex-foundation/metaplex-program-library/pull/1133
