[package]
name = "unstake-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "unstake.it"
path = "src/main.rs"

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.26.0", features = ["metadata", "stake", "token"] }
base64 = "0.21.2"
borsh = { workspace = true }
clap = { version = "^4.0", features = ["derive"] }
clap2 = { package = "clap", version = "^2.0" } # required for solana-clap-utils
derive_more = "^0.99"
itertools = "^0.10"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
solana-clap-utils = "^1.14"
solana-cli-config = "^1.14"
solana-client = "^1.14"
solana-sdk = "^1.14"
solana-program = { workspace = true }
solana-transaction-status = "1.14"
unstake = { path = "../programs/unstake" }
