[package]
name = "unstake-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "unstakeit"
path = "src/main.rs"

[dependencies]
anchor-lang = "0.28.0"
base64 = "0.21.2"
borsh = "^0.9.1"
clap = { version = "^4.0", features = ["derive"] }
clap2 = { package = "clap", version = "^2.0" }                              # required for solana-clap-utils
derive_more = "^0.99"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
solana-clap-utils = "~1.14"
solana-cli-config = "~1.14"
solana-client = "~1.14"
solana-sdk = "~1.14"
solana-program = "~1.14"
solana-stake-program = "~1.14"
spl-associated-token-account = "1.1.1"
spl-token = "^3.0"
unstake = { path = "../programs/unstake" }
unstake_interface = { path = "../unstake_interface", features = ["serde"] }
