[package]
name = "unstake-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "unstakeit"
path = "src/main.rs"

[dependencies]
anchor-lang = { workspace = true }
base64 = { workspace = true }
borsh = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clap2 = { workspace = true }                              # required for solana-clap-utils
derive_more = { workspace = true }
mpl-token-metadata = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-account-decoder = { workspace = true }
solana-clap-utils = { workspace = true }
solana-cli-config = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-program = { workspace = true }
solana-stake-program = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
unstake = { workspace = true }
unstake_interface = { workspace = true, features = ["serde"] }
