[package]
name = "unstake-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spl-math = { workspace = true, features = ["no-entrypoint"] }
unstake_interface = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
