[package]
name = "unstake"
version = "1.0.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "unstake"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
local-testing = []

default = []

[dev-dependencies]
proptest = "1.0"

[dependencies.spl-math]
version = "0.1.0"
features = ["no-entrypoint"]

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.28.0", features = ["metadata", "stake", "token"] }
mpl-token-metadata = { version = "^1.12", features = ["no-entrypoint"] }
spl-associated-token-account = "^1.1" # required for anchor-spl token
