[package]
name = "unstake"
version = "2.0.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "unstake"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
local-testing = []

default = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true, features = ["metadata", "stake", "token"] }
mpl-token-metadata = { workspace = true, features = ["no-entrypoint"] }
serde = { workspace = true, features = ["derive"] }
spl-associated-token-account = { workspace = true, features = ["no-entrypoint"] } # required for anchor-spl token
spl-math = { workspace = true, features = ["no-entrypoint"] }

[dev-dependencies]
proptest = { workspace = true }
