[package]
name = "unstake"
version = "2.0.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "unstake"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
local-testing = []

default = []

# Can't use workspace dependencies here because:
# We're using solana-program 1.14 that can't handle workspace dependencies.
# But if we try to upgrade to 1.16, anchor 0.28.0 depends on mpl-token-metadata ^1,
# which has borsh compat issues.
# Fuck this. I'm not gonna waste any more time upgrading anchor or trying to fix this.
# We will remove anchor from all our programs at some point.

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.28.0", features = ["metadata", "stake", "token"] }
mpl-token-metadata = { version = "^1", features = ["no-entrypoint"] }
serde = { version = "^1", features = ["derive"] }
spl-associated-token-account = { version = "^1.1", features = ["no-entrypoint"] } # required for anchor-spl token
spl-math = { version = ">=0.1", features = ["no-entrypoint"] }
unstake_interface = { path = "../../unstake_interface" }
unstake-lib = { path = "../../unstake-lib" }

[dev-dependencies]
proptest = "^1"
